# FinderV3

./: .gitignore  .swp  README.md  finder_setup.sh
Tivac/brazo/: brazo.ino
ToInstall/: 90-finder.rules  READrunnerWEBINTERFACE.txt  prevComand.sh
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/pkgconfig/: finder_bringup.pc
catkin_ws/src/audio/number_detection/: CMakeLists.txt  package.xml
catkin_ws/src/bag_files/: mapping_01.bag  mapping_06.bag  mapping_07.bag
catkin_ws/src/finder_bringup/: CMakeLists.txt  package.xml
catkin_ws/src/finder_bringup/config/: finder_base_2d_gazebo.lua  finder_base_3d_gazebo.lua
catkin_ws/src/finder_bringup/launch/: Interface.perspective  finder_2Dmapping.launch  finder_2Dnav.launch  finder_2dnavigation.launch  finder_amcl.launch  finder_arm.launch  finder_arm_teleop.launch  finder_cameras.launch  finder_cameras_base_station.launch  finder_cartographer_2d.launch  finder_cartographer_3d.launch  finder_gmapping.launch  finder_gmapping_simulation.launch  finder_hardware.launch  finder_hardware_test.launch  finder_hector.launch  finder_laser_kinect.launch  finder_microphone.launch  finder_microphone_base.launch  finder_robot.launch  finder_rviz.launch  (+3 more)
catkin_ws/src/finder_slam/: CMakeLists.txt  package.xml
catkin_ws/src/hri/: .readme.txt.swp  Camera.perspective
catkin_ws/src/hri/finder_gui/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml
catkin_ws/src/hri/finder_gui/include/finder_gui/: main_window.hpp  qnode.hpp
catkin_ws/src/hri/finder_gui/src/: Interface_ui.py  Interface_ui.ui  debug.py  finder_interface.py  main.cpp  main_window.cpp  qnode.cpp
catkin_ws/src/hri/finder_gui/ui/: main_window.ui
catkin_ws/src/interface_GUI/: readme.txt
(+306 files in other folders)
